# django-pdf-example

./: README.md  pyproject.toml
config/: settings.py  urls.py
main/: views.py
static/: style.css
templates/: my_detail.html
